# VeriRevOps

./: .gitignore  RAG_OVERVIEW.md  README.md  kb.md
.github/workflows/: deploy.yml
espocrm/: docker-compose.yaml
espocrm/crm/: docker-compose.yaml
espocrm/democrm/: docker-compose.yaml
evolution/: docker-compose.yaml
infrastructure/dozzle/: docker-compose.yml
n8n/: docker-compose.yaml
temp_sqladmin/: sqladmin-0.21.0-py3-none-any.whl
temp_sqladmin/extracted/sqladmin-0.21.0.dist-info/: RECORD
vdbot/: docker-compose.yml
vdbot/app/: database.py
vdbot/app/controller/: evolution.py
vdbot/app/templates/: dashboard.html
veridata/veridata_admin/: docker-compose.yml
veridata/veridata_admin/app/: admin.py  main.py  models.py  ops.py
veridata/veridata_bot/: docker-compose.yml  pyproject.toml
veridata/veridata_bot/app/: database.py  main.py  ops.py
veridata/veridata_bot/scripts/: verify_refactor.py
veridata/veridata_rag/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
veridata/veridata_sync/: Dockerfile  docker-compose.yml  pyproject.toml
veridata/veridata_sync/app/: auth.py  config.py  db.py  init_db.py  main.py  schema.sql
veridata/veridata_sync/app/routes/: api.py  configs.py  contacts.py  tenants.py
veridata/veridata_sync/app/services/: crm.py
veridata/veridata_sync/app/templates/: base.html
veridata/veridata_sync/app/templates/tenants/: configs.html  contacts.html  edit.html  list.html
veridata/veridata_worker/: docker-compose.yml
verirag_core/: docker-compose.yml
verirag_core/src/: rag.py  schemas.py
(+101 files in other folders)
